--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-dom": "^15.4.2",
     "react-redux": "^5.0.2",
     "redux": "^3.6.0",
+    "redux-logger": "^2.7.4",
     "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
@@ -34,8 +35,12 @@
     "babel-preset-react": "^6.22.0",
     "babel-preset-react-hmre": "^1.1.1",
     "css-loader": "^0.26.1",
-    "eslint": "^3.14.0",
+    "eslint": "^3.14.1",
+    "eslint-config-airbnb": "^14.0.0",
+    "eslint-config-airbnb-base": "^11.0.1",
     "eslint-loader": "^1.6.1",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-jsx-a11y": "^3.0.2",
     "eslint-plugin-react": "^6.9.0",
     "express": "^4.14.0",
     "file-loader": "^0.9.0",
@@ -44,7 +49,6 @@
     "livescript-loader": "^0.1.6",
     "node-sass": "^4.3.0",
     "react-hot-loader": "^1.3.1",
-    "redux-logger": "^2.7.4",
     "sass-loader": "^4.1.1",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
