--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -37,13 +37,17 @@
       "never"
     ],
 	"no-tabs": "off",
+	"max-len": "warn",
 	"react/self-closing-comp": ["warn"],
 	"react/prefer-stateless-function": ["off"],
 	"react/jsx-indent": ["warn", "tab"],
 	"react/jsx-indent-props": ["warn", "tab"],
 	"react/jsx-boolean-value": "warn",
 	"react/forbid-prop-types": "warn",
+	"react/jsx-no-bind": "off",
+	"react/require-default-props": "warn",
 	"no-plusplus": "warn",
+	"no-unused-vars": "warn",
 	"import/no-named-default": "warn",
 	"import/prefer-default-export": "warn",
 	"no-mixed-operators": "off",
