modify eslint settings
modify eslint settings

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -40,13 +40,15 @@
 	"no-bitwise": "off",
 	"no-shadow": "off",
 	"max-len": "warn",
+	"block-spacing": "off",
+	"spaced-comment": "warn",
 	"react/self-closing-comp": ["warn"],
-	"react/prefer-stateless-function": ["warn"],
+	"react/prefer-stateless-function": ["off"],
 	"react/jsx-indent": ["warn", "tab"],
 	"react/jsx-indent-props": ["warn", "tab"],
 	"react/jsx-boolean-value": "warn",
 	"react/forbid-prop-types": "warn",
-	"react/jsx-no-bind": "warn",
+	"react/jsx-no-bind": "off",
 	"react/require-default-props": "warn",
 	"no-plusplus": "warn",
 	"no-unused-vars": "warn",
