--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "babel-polyfill": "^6.22.0",
     "d3": "^3.5.17",
+    "mathjs": "^3.10.1",
     "rd3": "^0.7.4",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
