--- a/package.json
+++ b/package.json
@@ -4,17 +4,16 @@
   "description": "poliwag",
   "main": "index.js",
   "scripts": {
-    "parser": "lsc  ./raw/parser.ls --nodejs --harmoy",
-    "setdelp": "SET NODE_ENV=development",
-    "setprod": "SET NODE_ENV=production",
-    "start": "lsc server.ls --nodejs --harmoy",
-    "build": "webpack --config webpack.config.ls"
+    "clean": "rimraf ./build",
+    "start": "cross-env NODE_ENV=development lsc server.ls --nodejs --harmoy",
+    "build": "npm run clean && cross-env NODE_ENV=production webpack --config webpack.config.prod.ls",
+    "test": "npm run clean && cross-env NODE_ENV=development webpack --config webpack.config.dev.ls"
   },
   "author": "Panepo <panepo@github.io>",
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/Panepo/PileBunker.git"
+    "url": "git+https://github.com/Panepo/Poliwag.git"
   },
   "dependencies": {
     "babel-polyfill": "^6.22.0",
@@ -35,6 +34,7 @@
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.22.0",
     "babel-preset-react-hmre": "^1.1.1",
+    "cross-env": "^5.1.4",
     "css-loader": "^0.26.1",
     "eslint": "^3.14.1",
     "eslint-config-airbnb": "^14.0.0",
@@ -45,11 +45,13 @@
     "eslint-plugin-react": "^6.9.0",
     "express": "^4.14.0",
     "file-loader": "^0.9.0",
+    "html-webpack-plugin": "^3.1.0",
     "json-loader": "^0.5.4",
     "livescript": "^1.5.0",
     "livescript-loader": "^0.1.6",
     "node-sass": "^4.3.0",
     "react-hot-loader": "^1.3.1",
+    "rimraf": "^2.6.2",
     "sass-loader": "^4.1.1",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
