--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "clean": "rimraf ./build",
     "start": "cross-env NODE_ENV=development lsc server.ls --nodejs --harmoy",
-    "build": "npm run clean && cross-env NODE_ENV=production webpack --config webpack.config.prod.ls",
-    "dev": "npm run clean && cross-env NODE_ENV=development webpack --config webpack.config.dev.ls",
+    "build": "npm run clean && cross-env NODE_ENV=production webpack --progress --colors --config webpack.config.prod.ls",
+    "dev": "npm run clean && cross-env NODE_ENV=development webpack --progress --colors --config webpack.config.dev.ls",
 	"test": "mocha --compilers js:babel-core/register"
   },
   "author": "Panepo <panepo@github.io>",
