--- a/package.json
+++ b/package.json
@@ -9,7 +9,12 @@
     "build": "npm run clean && cross-env NODE_ENV=production webpack --progress --colors --config webpack.config.prod.ls",
     "dev": "npm run clean && cross-env NODE_ENV=development webpack --progress --colors --config webpack.config.dev.ls",
     "test": "mocha --compilers js:babel-core/register",
-    "travis": "cross-env NODE_ENV=production webpack --config webpack.config.prod.ls"
+    "travis": "cross-env NODE_ENV=production webpack --config webpack.config.prod.ls",
+    "lint": "eslint ./src/",
+    "lint:fix": "npm run lint -- --fix",
+    "prettier": "npm run prettierJS && npm run prettierJSX",
+    "prettierJS": "prettier --single-quote --no-semi --trailing-comma none --write \"src/**/*.js\"",
+    "prettierJSX": "prettier --single-quote --no-semi --trailing-comma none --write \"src/**/*.jsx\""
   },
   "author": "Panepo <panepo@github.io>",
   "license": "MIT",
@@ -38,13 +43,17 @@
     "babel-preset-react-hmre": "^1.1.1",
     "cross-env": "^5.1.4",
     "css-loader": "^0.26.1",
-    "eslint": "^3.14.1",
-    "eslint-config-airbnb": "^14.0.0",
-    "eslint-config-airbnb-base": "^11.0.1",
-    "eslint-loader": "^1.6.1",
+    "eslint": "^3.19.0",
+    "eslint-config-prettier": "^2.3.0",
+    "eslint-config-standard": "^10.2.1",
+    "eslint-config-standard-react": "^5.0.0",
+    "eslint-plugin-babel": "^4.1.1",
     "eslint-plugin-import": "^2.2.0",
-    "eslint-plugin-jsx-a11y": "^3.0.2",
-    "eslint-plugin-react": "^6.9.0",
+    "eslint-plugin-node": "^4.2.2",
+    "eslint-plugin-prettier": "^2.1.2",
+    "eslint-plugin-promise": "^3.5.0",
+    "eslint-plugin-react": "^7.0.1",
+    "eslint-plugin-standard": "^3.0.1",
     "express": "^4.14.0",
     "file-loader": "^0.9.0",
     "html-webpack-plugin": "^3.1.0",
@@ -53,6 +62,7 @@
     "livescript-loader": "^0.1.6",
     "mocha": "^5.0.5",
     "node-sass": "^4.3.0",
+    "prettier": "1.11.1",
     "react-hot-loader": "^1.3.1",
     "rimraf": "^2.6.2",
     "sass-loader": "^4.1.1",
